# start_menu.gd
extends Control

# --- Ø§Ù„Ø«ÙˆØ§Ø¨Øª ÙˆØ§Ù„Ø®ØµØ§Ø¦Øµ ---
@export var game_scene_path: String = "res://main.tscn"
# ØªØ£ÙƒØ¯ Ø£Ù† Ù‡Ø°Ø§ Ø§Ù„Ù…Ø³Ø§Ø± ÙŠØ·Ø§Ø¨Ù‚ Ù…ÙƒØ§Ù† Ù…Ù„Ù Ø´Ø§Ø´Ø© Ø§Ù„ØªØ­Ù…ÙŠÙ„ Ù„Ø¯ÙŠÙƒ
const LOADING_SCREEN_PATH = "res://atk_1/LoadingScreen.tscn"

# --- Ø§Ù„Ø¹Ù‚Ø¯ ---
@onready var menu_background = $MenuBackground
@onready var player_anim: AnimatedSprite2D = menu_background.get_node_or_null("PlayerAnimation")
@onready var boss_anim: AnimatedSprite2D = menu_background.get_node_or_null("BossAnimation")

@onready var start_button: TextureButton = $VBoxContainer/Button
@onready var quit_button: TextureButton = $VBoxContainer/Button2 as TextureButton

# ðŸ’¡ Ø¹Ù‚Ø¯Ø© Ø§Ù„Ù…ÙˆØ³ÙŠÙ‚Ù‰ Ø§Ù„Ø¬Ø¯ÙŠØ¯Ø© ðŸ’¡
@onready var menu_music_player: AudioStreamPlayer2D = $MenuMusicPlayer 


func _ready() -> void:
	get_tree().paused = false
	
	# ðŸ”Š ØªØ´ØºÙŠÙ„ Ù…ÙˆØ³ÙŠÙ‚Ù‰ Ø§Ù„Ù‚Ø§Ø¦Ù…Ø© Ø§Ù„Ø±Ø¦ÙŠØ³ÙŠØ© ÙÙˆØ± ØªØ­Ù…ÙŠÙ„ Ø§Ù„Ù…Ø´Ù‡Ø¯
	if menu_music_player and not menu_music_player.is_playing():
		menu_music_player.play()
	
	# ØªØ´ØºÙŠÙ„ Ø£Ù†ÙŠÙ…ÙŠØ´Ù† Ø§Ù„Ø®Ù„ÙÙŠØ©
	if player_anim: player_anim.play("idle")
	if boss_anim: boss_anim.play("idle")
		
	# Ø±Ø¨Ø· Ø§Ù„Ø£Ø²Ø±Ø§Ø±
	if start_button:
		start_button.pressed.connect(_on_StartGameButton_pressed)
	else:
		print("Error: Start Button not found")
		

# --- Ø¯Ø§Ù„Ø© Ø§Ù„Ø§Ù†ØªÙ‚Ø§Ù„ Ø¥Ù„Ù‰ Ø§Ù„Ù„Ø¹Ø¨Ø© ---
func _on_StartGameButton_pressed() -> void:
	if game_scene_path == "":
		print("Error: Game scene path is empty!")
		return
		
	# 1. Ø¥ÙŠÙ‚Ø§Ù Ø§Ù„Ù…ÙˆØ³ÙŠÙ‚Ù‰ Ù„Ù…Ù†Ø¹ Ø§Ø³ØªÙ…Ø±Ø§Ø±Ù‡Ø§ ÙÙŠ Ù…Ø´Ù‡Ø¯ Ø§Ù„ØªØ­Ù…ÙŠÙ„ Ø£Ùˆ Ø§Ù„Ù„Ø¹Ø¨
	if menu_music_player:
		menu_music_player.stop()
		
	# 2. Ù†Ø®Ø¨Ø± Ø§Ù„Ù…Ø¯ÙŠØ± Ø§Ù„Ø¹Ø§Ù… Ù…Ø§ Ù‡Ùˆ Ø§Ù„Ù…Ø´Ù‡Ø¯ Ø§Ù„Ù‚Ø§Ø¯Ù…
	# (ÙŠÙØªØ±Ø¶ Ø£Ù† Ù„Ø¯ÙŠÙƒ Ø³ÙƒØ±ÙŠØ¨Øª GameManager ÙŠØ¹Ù…Ù„ ÙÙŠ Project Settings Ø£Ùˆ ÙƒÙ€ AutoLoad)
	if is_instance_valid(GameManager):
		GameManager.next_scene_path = game_scene_path
	else:
		print("Error: GameManager is not available. Cannot set next scene path.")
		return
	
	# 3. Ù†Ù†ØªÙ‚Ù„ Ø¥Ù„Ù‰ Ø´Ø§Ø´Ø© Ø§Ù„ØªØ­Ù…ÙŠÙ„
	var error = get_tree().change_scene_to_file(LOADING_SCREEN_PATH)
	
	if error != OK:
		print("Error changing to loading screen. Check path: ", LOADING_SCREEN_PATH)

func _on_Quit_pressed() -> void:
	get_tree().quit()
